# voxel_ray_tracer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
paper/: paper.tex
src/: camera.rs  export.rs  lib.rs  main.rs
src/ray_tracer/: dense.rs  mod.rs  types.rs
src/ray_tracer/octree/: lookup_table.rs  mod.rs
src/voxel/: mod.rs
