[package]
name = "voxel_ray_tracer"
version = "0.1.0"
edition = "2021"

[features]
trace = ["tracing", "tracing-tracy", "tracing-subscriber"]

[dependencies]
rand = "0.9.0"
glam = "0.30.1"
image = "0.25.5"
itertools = "0.14.0"
noise = "0.9.0"
rayon = "1.10.0"
tracing = { version = "0.1.41", optional = true }
tracing-tracy = { version = "0.11.4", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
